@@ -5,6 +5,7 @@ New features
 ''''''''''''
 
     * Download bigger covers from Last.fm
+    * Centering the current song using Ctrl+i now also selects the current song
 
 Bug fixes
 '''''''''
